# positional-popcount

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  benchmark.cpp  example.c  fast_flagstats.c  fast_flagstats.cpp  fast_flagstats.h  main.cpp  makefile  pospopcnt.c  pospopcnt.h
benchmark/linux/: aligned_alloc.h  instrumented_benchmark.cpp  linux-perf-events.h  memalloc.h  popcnt.h
